--- a/SLBr/Controls/CredentialsDialogWindow.xaml
+++ b/SLBr/Controls/CredentialsDialogWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SLBr.Controls"
         mc:Ignorable="d"
         Title="Credentials" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen"
-        ContentRendered="Window_ContentRendered" WindowStyle="None" ResizeMode="NoResize" AllowsTransparency="True" Background="Transparent" MinWidth="400">
+        ContentRendered="Window_ContentRendered" WindowStyle="None" ResizeMode="NoResize" AllowsTransparency="True" Background="Transparent" MinWidth="400"  MaxWidth="600">
     <Window.Resources>
         <ResourceDictionary Source="../WinUIStyleDictionary.xaml"/>
     </Window.Resources>
@@ -23,8 +23,10 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <DockPanel Margin="0,0,0,10" Grid.Row="0" Height="Auto">
-                    <TextBlock x:Name="QuestionIcon" FontSize="18" FontFamily="Segoe Fluent Icons" Margin="0,0,5,0">&#xe946;</TextBlock>
-                    <Label Name="QuestionText" Margin="0,0,0,0" Padding="0" FontWeight="Medium" FontSize="14">Question</Label>
+                    <TextBlock x:Name="QuestionIcon" FontSize="18" FontFamily="{StaticResource IconFontFamily}" Margin="0,0,5,0">&#xe946;</TextBlock>
+                    <Label Margin="0,0,0,0" Padding="0" FontWeight="Medium" FontSize="14">
+                        <TextBlock Name="QuestionText" TextTrimming="CharacterEllipsis">Question</TextBlock>
+                    </Label>
                 </DockPanel>
                 <DockPanel Margin="0,0,0,10" Grid.Row="1">
                     <TextBlock VerticalAlignment="Center" Margin="0,0,10,0" Width="55">Username</TextBlock>
