--- a/SLBr/Controls/InformationDialogWindow.xaml
+++ b/SLBr/Controls/InformationDialogWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SLBr.Controls"
         mc:Ignorable="d"
         Title="Prompt" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen"
-        WindowStyle="None" ResizeMode="NoResize" AllowsTransparency="True" Background="Transparent" MinWidth="400">
+        WindowStyle="None" ResizeMode="NoResize" AllowsTransparency="True" Background="Transparent" MinWidth="400" MaxWidth="600">
     <Window.Resources>
         <ResourceDictionary Source="../WinUIStyleDictionary.xaml"/>
     </Window.Resources>
@@ -22,12 +22,14 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <DockPanel Margin="0,0,0,10" Grid.Row="0" Height="Auto">
-                    <TextBlock x:Name="QuestionIcon" FontSize="18" FontFamily="Segoe Fluent Icons" Margin="0,0,5,0">&#xe946;</TextBlock>
-                    <Label Name="QuestionText" Margin="0,0,0,0" Padding="0" FontWeight="Medium" FontSize="14">Question</Label>
+                    <TextBlock x:Name="QuestionIcon" FontSize="18" FontFamily="{StaticResource IconFontFamily}" Margin="0,0,5,0">&#xe946;</TextBlock>
+                    <Label Margin="0,0,0,0" Padding="0" FontWeight="Medium" FontSize="14">
+                        <TextBlock Name="QuestionText" TextTrimming="CharacterEllipsis">Question</TextBlock>
+                    </Label>
                 </DockPanel>
                 <DockPanel Margin="0,0,0,10" Grid.Row="1" Height="Auto">
-                    <TextBlock x:Name="IconText" FontSize="18" FontFamily="Segoe Fluent Icons" Margin="0,0,5,0">&#xE80F;</TextBlock>
-                    <TextBlock x:Name="DescriptionText" VerticalAlignment="Center">Description</TextBlock>
+                    <TextBlock x:Name="IconText" FontSize="18" FontFamily="{StaticResource IconFontFamily}" Margin="0,0,5,0">&#xE80F;</TextBlock>
+                    <TextBlock x:Name="DescriptionText" TextTrimming="CharacterEllipsis" VerticalAlignment="Center">DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription</TextBlock>
                 </DockPanel>
                 <StackPanel Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Right">
                     <Button BorderBrush="{StaticResource BorderBrush}" IsDefault="True" Name="PositiveButton" Click="DialogOk_Click" MinWidth="60">Yes</Button>
