--- a/SLBr/Controls/MultiPromptDialogWindow.xaml
+++ b/SLBr/Controls/MultiPromptDialogWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SLBr.Controls.PromptDialogWindow"
+﻿<Window x:Class="SLBr.Controls.MultiPromptDialogWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -29,9 +29,17 @@
                         <TextBlock Name="QuestionText" TextTrimming="CharacterEllipsis">Question</TextBlock>
                     </Label>
                 </DockPanel>
-                <StackPanel Margin="0,0,0,10" Grid.Row="1">
-                    <TextBlock x:Name="MessageText" TextTrimming="CharacterEllipsis" Margin="0,0,0,10" VerticalAlignment="Center">Message</TextBlock>
-                    <TextBox Name="UserInputTextBox" MinWidth="350" Width="Auto"></TextBox>
+                <StackPanel x:Name="InputStack" Grid.Row="1">
+                    <ItemsControl x:Name="InputsList">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Margin="0,0,0,10">
+                                    <TextBlock TextTrimming="CharacterEllipsis" Text="{Binding Name}" Margin="0,0,0,5"/>
+                                    <TextBox Text="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" KeyUp="ValidateInputs" Width="Auto"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
                 </StackPanel>
 
                 <WrapPanel Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom">
